--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,9 +28,9 @@ jobs:
           command: |
             export apk_name="build-${CIRCLE_BRANCH}-`git rev-parse --short HEAD`.apk"
             curl -X POST -L \
-            -H "Authorization: Bearer 366214055822-3ngdqts8moqpbrggsdt5l882gj10gq1l.apps.googleusercontent.com" \
+            -H "Authorization: Bearer AIzaSyDbTxwB3umXbyNftOxa412yxUng20BOsCo" \
             -F "metadata={name : '$apk_name'};type=application/json;charset=UTF-8" \
-            -F "file=apk_name;type=application/zip" \
+            -F "file=apk_name;type=application/apk" \
             "https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart"
       - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: app/build/outputs/apk/debug
