--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - run:
           name: Upload to Google Drive
           command: |
-            export apk_name="build-${CIRCLE_BRANCH}-`git rev-parse --short HEAD`.apk"
+            export release_uploads="build-${CIRCLE_BRANCH}-`git rev-parse --short HEAD`.apk"
             curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' --header 'X-API-Token: 4b5163047afa93f918dbab9c5cbd94d103f5a769' 'https://api.appcenter.ms/v0.1/apps/AlexandrLenivenko/Compass/release_uploads'
 #            curl -X POST -L \
 #            -H "Authorization: Bearer AIzaSyDbTxwB3umXbyNftOxa412yxUng20BOsCo" \
