--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
           name: Build apk
-          command: ./gradlew assembleRelease
+          command: ./gradlew assembleDebug
       - run:
           name: Upload to Google Drive
           command: |
