--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
           name: Upload to Google Drive
           command: |
             export app_name="build-${CIRCLE_BRANCH}-`git rev-parse --short HEAD`.apk"
-            curl -X POST --header 'Content-Type: application/json' --F 'file=apk_name;type=application/apk'  --header 'Accept: application/json' --header 'X-API-Token: 4b5163047afa93f918dbab9c5cbd94d103f5a769' --data '{
+            curl -X POST --header 'Content-Type: application/json' --data 'file=apk_name;type=application/apk'  --header 'Accept: application/json' --header 'X-API-Token: 4b5163047afa93f918dbab9c5cbd94d103f5a769' --data '{
                                                                                                                                                                                   "release_id": 1,
                                                                                                                                                                                   "build_version": "11",                                                                                                                                                                "build_number": "111"
                                                                                                                                                                                 }' 'https://api.appcenter.ms/v0.1/apps/AlexandrLenivenko/Compass/release_uploads'
