--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,13 +26,13 @@ jobs:
       - run:
           name: Upload to Google Drive
           command: |
-            curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' --header 'X-API-Token: 4b5163047afa93f918dbab9c5cbd94d103f5a769' --data '{
+            HTTP_RESPONSE =$(curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' --header 'X-API-Token: 4b5163047afa93f918dbab9c5cbd94d103f5a769' --data '{
                                                                                                                                                                                   "release_id": 1,
                                                                                                                                                                                   "build_version": "11",
                                                                                                                                                                                   "build_number": "111"
-                                                                                                                                                                                }' 'https://api.appcenter.ms/v0.1/apps/AlexandrLenivenko/Compass/release_uploads'
-            curl -F "ipa=@Versions_1_1_0_12.ipa" https://rink.hockeyapp.net/api/sonoma/apps/cacf9867-87f7-4649-a400-632a775dde2d/app_versions/upload\?upload_id\=c18df340-069f-0135-3290-22000b559634
-            curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' --header 'X-API-Token: 4b5163047afa93f918dbab9c5cbd94d103f5a769' -d '{ "id": "10d82aa2-8449-499f-b6d3-44a855058eca", "mandatory_update": false, "notify_testers": false }' 'https://api.appcenter.ms/v0.1/apps/AlexandrLenivenko/Compass/releases/2/groups'
+                                                                                                                                                                                }' 'https://api.appcenter.ms/v0.1/apps/AlexandrLenivenko/Compass/release_uploads')
+#            curl -F "ipa=@Versions_1_1_0_12.ipa" https://rink.hockeyapp.net/api/sonoma/apps/cacf9867-87f7-4649-a400-632a775dde2d/app_versions/upload\?upload_id\=c18df340-069f-0135-3290-22000b559634
+#            curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' --header 'X-API-Token: 4b5163047afa93f918dbab9c5cbd94d103f5a769' -d '{ "id": "10d82aa2-8449-499f-b6d3-44a855058eca", "mandatory_update": false, "notify_testers": false }' 'https://api.appcenter.ms/v0.1/apps/AlexandrLenivenko/Compass/releases/2/groups'
 #            curl -F "ipa=@Versions_1_1_0_12.ipa" https://rink.hockeyapp.net/api/sonoma/apps/cacf9867-87f7-4649-a400-632a775dde2d/app_versions/upload\?upload_id\=c18df340-069f-0135-3290-22000b559634
 #                        export app_name="build-${CIRCLE_BRANCH}-`git rev-parse --short HEAD`.apk"
       #            curl -X POST -L \
