--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - run:
           name: Upload to Google Drive
           command: |
-            HTTP_RESPONSE =$(curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' --header 'X-API-Token: 4b5163047afa93f918dbab9c5cbd94d103f5a769' --data '{
+            export HTTP_RESPONSE =$(curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' --header 'X-API-Token: 4b5163047afa93f918dbab9c5cbd94d103f5a769' --data '{
                                                                                                                                                                                   "release_id": 1,
                                                                                                                                                                                   "build_version": "11",
                                                                                                                                                                                   "build_number": "111"
