--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,14 +23,38 @@ jobs:
       - run:
           name: Build apk
           command: ./gradlew assembleRelease
+
       - run:
-          name: Upload to Google Drive
-          command: |
-            def HTTP_RESPONSE =$(curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' --header 'X-API-Token: 4b5163047afa93f918dbab9c5cbd94d103f5a769' --data '{
-                                                                                                                                                                                  "release_id": 1,
-                                                                                                                                                                                  "build_version": "11",
-                                                                                                                                                                                  "build_number": "111"
-                                                                                                                                                                                }' 'https://api.appcenter.ms/v0.1/apps/AlexandrLenivenko/Compass/release_uploads')
+            name: Upload to AppCenter
+            commant: |
+              echo 'Installing App Center CLI tools'
+              npm install -g appcenter-cli
+
+              echo "Find build artifacts"
+              apkPath=$(find build -name "*.apk" | head -1)
+              echo "Found apk at $apkPath"
+
+              if [[ -z ${apkPath} ]]
+              then
+                  echo "No apks were found, skip publishing to App Center"
+              else
+                  echo "Publishing $apkPath to App Center"
+                  appcenter distribute release \
+                      --group Collaborators \
+                      --file "${apkPath}" \
+                      --release-notes 'App submission via Codemagic' \
+                      --app AlexandrLenivenko/Compass \
+                      --token "$4b5163047afa93f918dbab9c5cbd94d103f5a769" \
+                      --quiet
+
+#      - run:
+#          name: Upload to Google Drive
+#          command: |
+#            curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' --header 'X-API-Token: 4b5163047afa93f918dbab9c5cbd94d103f5a769' --data '{
+#                                                                                                                                                                                  "release_id": 1,
+#                                                                                                                                                                                  "build_version": "11",
+#                                                                                                                                                                                  "build_number": "111"
+#                                                                                                                                                                                }' 'https://api.appcenter.ms/v0.1/apps/AlexandrLenivenko/Compass/release_uploads'
 #            curl -F "ipa=@Versions_1_1_0_12.ipa" https://rink.hockeyapp.net/api/sonoma/apps/cacf9867-87f7-4649-a400-632a775dde2d/app_versions/upload\?upload_id\=c18df340-069f-0135-3290-22000b559634
 #            curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' --header 'X-API-Token: 4b5163047afa93f918dbab9c5cbd94d103f5a769' -d '{ "id": "10d82aa2-8449-499f-b6d3-44a855058eca", "mandatory_update": false, "notify_testers": false }' 'https://api.appcenter.ms/v0.1/apps/AlexandrLenivenko/Compass/releases/2/groups'
 #            curl -F "ipa=@Versions_1_1_0_12.ipa" https://rink.hockeyapp.net/api/sonoma/apps/cacf9867-87f7-4649-a400-632a775dde2d/app_versions/upload\?upload_id\=c18df340-069f-0135-3290-22000b559634
