[master]: added yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
       - run:
             name: Upload to AppCenter
             command: |
+              sudo apt-get install npm
               echo "Hello "
               install -g appcenter-cli
 
