--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
             command: |
               sudo apt-get install npm
               echo "Hello "
-              install -g appcenter-cli
+              npm install -g appcenter-cli
 
 
       #      - run:
