[master]: added yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,9 +27,8 @@ jobs:
       - run:
             name: Upload to AppCenter
             command: |
-              sudo apt-get install npm
               echo "Hello "
-              npm install -g appcenter-cli
+              sudo apt-get install -g appcenter-cli
 
 
       #      - run:
