--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,8 @@ jobs:
             name: Upload to AppCenter
             command: |
               echo "Hello "
-              sudo install appcenter-cli
+              sudo yum install npm
+              npm install -g appcenter-cli
 
 
       #      - run:
