--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
             command: |
               echo "Hello "
               sudo yum install npm
-              npm install -g appcenter-cli
+              npm apt-get install appcenter-cli
 
 
       #      - run:
