--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,7 @@ jobs:
             name: Upload to AppCenter
             command: |
               echo "Hello "
-              sudo apt-get install npm
-              npm install -g appcenter-cli
+              sudo apt-get install appcenter-cli
 
 
       #      - run:
