[master]: added yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
             name: Upload to AppCenter
             command: |
               echo "Hello "
+              curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.1/install.sh | bash
               appcenter apps list
 
 
