--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,8 @@ jobs:
             command: |
               echo "Hello "
               curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.1/install.sh | bash
+              echo 'Installing App Center CLI tools'
+              npm install -g appcenter-cli
               appcenter apps list
 
 
