--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,12 +28,9 @@ jobs:
             name: Upload to AppCenter
             command: |
               echo "Hello "
-              curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.1/install.sh | bash
-              echo 'Run the install command.'
-              nvm install node
-              echo 'Run the use command.'
-              nvm use node
-              echo 'Installing App Center CLI tools'
+              curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
+              sudo apt install nodejs
+              npm --version
               npm install -g appcenter-cli
 
 
