--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
             command: |
               echo "Hello "
               curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
-              sudo apt install nodejs
+              sudo apt-get install nodejs
               npm --version
               npm install -g appcenter-cli
 
