--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,9 @@ jobs:
             name: Upload to AppCenter
             command: |
               echo "Hello "
-              curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.34.0/install.sh | bash
+              mkdir ~/.npm-global
+              curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
+              sudo apt-get install nodejs
               npm --version
               npm install -g appcenter-cli
 
