--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,9 +28,7 @@ jobs:
             name: Upload to AppCenter
             command: |
               echo "Hello "
-              mkdir ~/.npm-global
-              curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
-              sudo apt-get install nodejs
+              sudo apt install build-essential
               npm --version
               npm install -g appcenter-cli
 
