[master]: added yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,10 @@ jobs:
             name: Upload to AppCenter
             command: |
               echo "Hello "
-              sudo apt-get appcenter-cli
+              curl -sL https://deb.nodesource.com/setup_9.x | sudo -E bash -
+              sudo apt-get install -y nodejs
+              npm -v
+              npm install -g appcenter-cli
 
 
 
