--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,8 @@ jobs:
             name: Upload to AppCenter
             command: |
               echo "Hello "
-              curl -sL https://deb.nodesource.com/setup_9.x | sudo -E bash -
-              sudo apt-get install -y nodejs
+              sudo apt install npm
+              sudo npm i -g npm@latest
               npm -v
               npm install -g appcenter-cli
 
