[master]: added yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
               echo "Hello "
               npm -v
               sudo npm install -g appcenter-cli
-              appcenter login -t a867ce9764313d1978972d8fe1648569bfec839d
+              appcenter login --token a867ce9764313d1978972d8fe1648569bfec839d
               appcenter distribute release --app AlexandrLenivenko/Compass --file app/build/outputs/apk/release/app-release.apk --group "Collaborators"
 
 
