--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,10 @@ jobs:
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
+          name: Upload to Google Drive
+          command: |
+            sudo apt-get install drive
+      - run:
           name: Chmod permissions
           command: sudo chmod +x ./gradlew
       - run:
@@ -30,12 +34,7 @@ jobs:
 #              sudo npm install -g appcenter-cli
 #              appcenter login --token a867ce9764313d1978972d8fe1648569bfec839d
 #              appcenter distribute release --app AlexandrLenivenko/Compass --file app/build/outputs/apk/release/app-release.apk --group "Collaborators"
-      - run:
-          name: Upload to Google Drive
-          command: |
-            sudo install drive
-#            appcenter login --token a867ce9764313d1978972d8fe1648569bfec839d
-#            appcenter distribute release --app AlexandrLenivenko/Compass --file app/build/outputs/apk/release/app-release.apk --group "Collaborators"
+
       - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: app/build/outputs/apk/release
           destination: reports
