--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,10 +11,6 @@ jobs:
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
-          name: Upload to Google Drive
-          command: |
-            sudo apt-get install gdrive /usr/local/bin/gdrive
-      - run:
           name: Chmod permissions
           command: sudo chmod +x ./gradlew
       - run:
@@ -27,13 +23,12 @@ jobs:
       - run:
           name: Build apk
           command: ./gradlew assembleRelease
-
-#      - run:
-#            name: Upload to AppCenter
-#            command: |
-#              sudo npm install -g appcenter-cli
-#              appcenter login --token a867ce9764313d1978972d8fe1648569bfec839d
-#              appcenter distribute release --app AlexandrLenivenko/Compass --file app/build/outputs/apk/release/app-release.apk --group "Collaborators"
+      - run:
+            name: Upload to AppCenter
+            command: |
+              sudo npm install -g appcenter-cli
+              appcenter login --token a867ce9764313d1978972d8fe1648569bfec839d
+              appcenter distribute release --app AlexandrLenivenko/Compass --file app/build/outputs/apk/release/app-release.apk --group "Collaborators"
 
       - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: app/build/outputs/apk/release
